# thriftyGramophone

./: .gitignore  CMakeLists.txt  thriftyGramophone.kdev4
src/: CMakeLists.txt  devices.cpp  devices.hpp  fileplayer.cpp  fileplayer.hpp  main.c  main.cpp  player.cpp  player.hpp  service.cpp  service.hpp  thriftygramophone.thrift
test/: CMakeLists.txt  devices_test.cpp  service_test.cpp
